Update order form to populate customerID and orderID

--- a/frontend/src/orderForm/index.html
+++ b/frontend/src/orderForm/index.html
@@ -125,10 +125,12 @@
           <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3">
             <div class="d-flex flex-row-reverse">
               <div class="col-md-3 col-6 ps-2">
-                <input class="form-control btn btn-primary" type="submit" value="Submit">
+                <button class="form-control btn btn-primary" type="submitButton" value="button" id="submitButton">Add
+                  Design
+                </button>
               </div>
               <div class="col-md-3 col-6 pe-2">
-                <button class="form-control btn btn-outline-secondary" id="submitButton" type="button">
+                <button class="form-control btn btn-outline-secondary" id="getOrderButton" type="button">
                   GetOrder
                 </button>
               </div>
