update navbar to change logo at md breakpoint.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,11 +9,14 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md bg-light">
+  <nav class="navbar navbar-expand-md bg-light py-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand pe-4" href="#">Creative Stitches</a>
+      <div class="mx-auto hidden-md">
+        <img src="assets/logoipsum-296.svg" alt="smaller alternate Brand Logo">
+      </div>
       <div class="collapse navbar-collapse" id="logoCollapse">
-        <img src="assets/logoipsum-297.svg" class="mx-auto" alt="brandLogo" data-bs-toggle="collapse"
+        <img src="assets/logoipsum-297.svg" class="ms-auto" alt="Brand Logo" data-bs-toggle="collapse"
           data-bs-target="logoCollapse">
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -25,24 +28,20 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              Navigation
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">Orders</a></li>
+              <li><a class="dropdown-item" href="#">Designs</a></li>
+              <li><a class="dropdown-item" href="#">Inventory</a></li>
+              <li><a class="dropdown-item" href="#">Calendar</a></li>
+              <li><a class="dropdown-item" href="#">Financials</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link" href="#">New Order</a>
           </li>
         </ul>
       </div>
