--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Creative Stitches</title>
-  <script type="module" src="./js/design.js"></script>
+  <script type="module" src="./design.js"></script>
 </head>
 
 <body>
