--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,50 +5,58 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Creative Stitches</title>
-  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./main.js"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md bg-light py-3">
+  <nav class="navbar navbar-expand-lg bg-light py-lg-3">
     <div class="container-fluid">
-      <a class="navbar-brand pe-4" href="#">Creative Stitches</a>
-      <div class="mx-auto hidden-md">
-        <img src="assets/logoipsum-296.svg" alt="smaller alternate Brand Logo">
-      </div>
-      <div class="collapse navbar-collapse" id="logoCollapse">
-        <img src="assets/logoipsum-297.svg" class="ms-auto" alt="Brand Logo" data-bs-toggle="collapse"
-          data-bs-target="logoCollapse">
-      </div>
+      <a class="navbar-brand p-0 me-0 me-lg-2" href="#">
+        <img src="./assets/logoipsum-297.svg" alt="large logo">
+      </a>
+      <ul class="nav nav-underline me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link nav-link-ltr" aria-current="page" href="#">Link 1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-ltr" href="#">Link 2</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-link-ltr" href="#">Link 3</a>
+        </li>
+      </ul>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 me-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Navigation
+              Dropdown
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Orders</a></li>
-              <li><a class="dropdown-item" href="#">Designs</a></li>
-              <li><a class="dropdown-item" href="#">Inventory</a></li>
-              <li><a class="dropdown-item" href="#">Calendar</a></li>
-              <li><a class="dropdown-item" href="#">Financials</a></li>
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">New Order</a>
+            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
-
 </body>
 
 </html>
