Update orderForm to populate MongoDB correctly

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -283,7 +283,7 @@
             <button class="form-control btn btn-outline-secondary" id="resetButton" type="reset">Reset</button>
           </div>
           <div class="col-md-3 col-6 ps-2">
-            <button class="btn btn-primary btn-sm float-right" id="submitButton" type="button">Submit
+            <button class="btn btn-primary btn-sm float-right" id="reviewButton" type="button">Review Order
             </button>
           </div>
           <div class="col-md-3 col-6 ps-2">
