--- a/frontend/src/orderForm/index.html
+++ b/frontend/src/orderForm/index.html
@@ -70,7 +70,7 @@
         aria-valuemin="0" aria-valuemax="100">
         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
       </div>
-      <form action="/orderSubmit" method="post">
+      <form action="/orderSubmit" method="post" id="orderForm">
         <div class="d-flex flex-column justify-content-center align-items-center mt-5">
           <h1 class="display-4">Order Form</h1>
           <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
@@ -125,7 +125,7 @@
           <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3">
             <div class="d-flex flex-row-reverse">
               <div class="col-md-3 col-6 ps-2">
-                <button class="form-control btn btn-primary" type="submitButton" value="button" id="submitButton">Add
+                <button class="form-control btn btn-primary" type="button" value="button" id="submitButton">Add
                   Design
                 </button>
               </div>
