--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,54 +9,168 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-light py-lg-3">
-    <div class="container-fluid">
-      <a class="navbar-brand p-0 me-0 me-lg-2" href="#">
-        <img src="./assets/logoipsum-297.svg" alt="large logo">
-      </a>
-      <ul class="nav nav-underline me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link nav-link-ltr" aria-current="page" href="#">Link 1</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-ltr" href="#">Link 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-ltr" href="#">Link 3</a>
-        </li>
-      </ul>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar sticky-top navbar-expand-md bg-light mb-4">
+    <div class="container-xxl">
+      <a class="navbar-brand" href="#"><img src="assets/logoipsum-297.svg" alt="brand logo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              Orders
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">New Order</a></li>
+              <li><a class="dropdown-item" href="#">View Orders</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link" href="#">Financials</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Calendar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Inventory</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+
+  <div class="container">
+    <h1 class="display-6 text-center mb-4">Current Orders</h1>
+    <div class="g-3 mb-3 mb-lg-5 row">
+      <div class="col-xxl-3 col-md-6  d-flex justify-content-center">
+        <div class="card ms-md-auto mx-xxl-auto">
+          <div class="card-body">
+            <h5 class="card-title">CHS Band</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Due Date</div>
+                </div>
+                10/6/2023
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Total Items</div>
+                </div>
+                <span class="fw-semibold ">14</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Status</div>
+                </div>
+                <span class="badge bg-success rounded-pill">Ready</span>
+              </li>
+            </ul>
+            <hr>
+            <img src="assets/DynamicImageHandler.png" class="card-img-bottom" alt="sweatshirt asset">
+          </div>
+        </div>
+      </div>
+      <div class="col-xxl-3 col-md-6 d-flex justify-content-center">
+        <div class="card me-md-auto mx-xxl-auto">
+          <div class="card-body">
+            <h5 class="card-title">Claxton Heating and Air</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Company Polo</h6>
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Due Date</div>
+                </div>
+                9/23/2023
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Total Items</div>
+                </div>
+                <span class="fw-semibold ">8</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Status</div>
+                </div>
+                <span class="badge bg-warning rounded-pill">Not Started</span>
+              </li>
+            </ul>
+            <hr>
+            <img src="assets/hvac-technician-shirts-heating-cooling-54_600x.webp" class="card-img-bottom"
+              alt="sweatshirt asset">
+          </div>
+        </div>
+      </div>
+      <div class="col-xxl-3 col-md-6 d-flex justify-content-center">
+        <div class="card ms-md-auto mx-xxl-auto">
+          <div class="card-body">
+            <h5 class="card-title">Hagan Hunting Club</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Ballcap with Leather Patch</h6>
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Due Date</div>
+                </div>
+                7/24/2023
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Total Items</div>
+                </div>
+                <span class="fw-semibold ">30</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Status</div>
+                </div>
+                <span class="badge bg-danger rounded-pill">Overdue</span>
+              </li>
+            </ul>
+            <hr>
+            <img src="assets/Vintage-Watch-Hunting-Club-Green_002_06489617-9b7a-485c-a229-4800d4f0e0bb.jpg"
+              class="card-img-bottom" alt="sweatshirt asset">
+          </div>
+        </div>
+      </div>
+      <div class="col-xxl-3 col-md-6 d-flex justify-content-center">
+        <div class="card me-md-auto mx-xxl-auto">
+          <div class="card-body">
+            <h5 class="card-title">Kaylee's Wedding</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Monogramed Napkins</h6>
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Due Date</div>
+                </div>
+                2/14/2024
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Total Items</div>
+                </div>
+                <span class="fw-semibold">50</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Status</div>
+                </div>
+                <span class="badge bg-info rounded-pill">In Progress</span>
+              </li>
+            </ul>
+            <hr>
+            <img src="assets/monogram-linen-napkins-linoroom.jpg" class="card-img-bottom" alt="sweatshirt asset">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
