- fix scaling of cards and test image scaling

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -46,12 +46,13 @@
 
   <div class="container">
     <h1 class="display-6 text-center mb-4">Current Orders</h1>
-    <div class="g-3 mb-3 mb-lg-5 row">
-      <div class="col-xxl-3 col-md-6  d-flex justify-content-center">
+    <div class="mx-3 mx-md-0 gx-4 gx-lg-5 gy-5 row">
+      <div class="col-xl-4 col-md-6 d-flex justify-content-center">
         <div class="card ms-md-auto mx-xxl-auto">
           <div class="card-body">
             <h5 class="card-title">CHS Band</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
+            <hr>
             <ul class="list-group">
               <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
@@ -77,42 +78,14 @@
           </div>
         </div>
       </div>
-      <div class="col-xxl-3 col-md-6 d-flex justify-content-center">
-        <div class="card me-md-auto mx-xxl-auto">
-          <div class="card-body">
-            <h5 class="card-title">Claxton Heating and Air</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Company Polo</h6>
-            <ul class="list-group">
-              <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                  <div class="fw-bold">Due Date</div>
-                </div>
-                9/23/2023
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                  <div class="fw-bold">Total Items</div>
-                </div>
-                <span class="fw-semibold ">8</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                  <div class="fw-bold">Status</div>
-                </div>
-                <span class="badge bg-warning rounded-pill">Not Started</span>
-              </li>
-            </ul>
-            <hr>
-            <img src="assets/hvac-technician-shirts-heating-cooling-54_600x.webp" class="card-img-bottom"
-              alt="sweatshirt asset">
-          </div>
-        </div>
-      </div>
-      <div class="col-xxl-3 col-md-6 d-flex justify-content-center">
+
+      <div class="col-xl-4 col-md-6 d-flex justify-content-center">
         <div class="card ms-md-auto mx-xxl-auto">
           <div class="card-body">
             <h5 class="card-title">Hagan Hunting Club</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Ballcap with Leather Patch</h6>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Ballcap with Leather Patch Ballcap with Leather Patch
+              Ballcap with Leather Patch testing the lengh of the subtitle</h6>
+            <hr>
             <ul class="list-group">
               <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
@@ -139,11 +112,12 @@
           </div>
         </div>
       </div>
-      <div class="col-xxl-3 col-md-6 d-flex justify-content-center">
+      <div class="col-xl-4 col-md-6 d-flex justify-content-center">
         <div class="card me-md-auto mx-xxl-auto">
           <div class="card-body">
             <h5 class="card-title">Kaylee's Wedding</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Monogramed Napkins</h6>
+            <hr>
             <ul class="list-group">
               <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
@@ -166,6 +140,38 @@
             </ul>
             <hr>
             <img src="assets/monogram-linen-napkins-linoroom.jpg" class="card-img-bottom" alt="sweatshirt asset">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xl-4 col-md-6 d-flex justify-content-center">
+        <div class="card ms-md-auto mx-xxl-auto">
+          <div class="card-body">
+            <h5 class="card-title">CHS Band</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
+            <hr>
+            <ul class="list-group">
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Due Date</div>
+                </div>
+                10/6/2023
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Total Items</div>
+                </div>
+                <span class="fw-semibold ">14</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Status</div>
+                </div>
+                <span class="badge bg-success rounded-pill">Ready</span>
+              </li>
+            </ul>
+            <hr>
+            <img src="assets/DynamicImageHandler.png" class="card-img-bottom" alt="sweatshirt asset">
           </div>
         </div>
       </div>
