fix margin auto for breakpoint medium and up

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -47,8 +47,8 @@
   <div class="container">
     <h1 class="display-6 text-center mb-4">Current Orders</h1>
     <div class="mx-3 mx-md-0 gx-4 gx-lg-5 gy-5 row">
-      <div class="col-xl-4 col-md-6 d-flex justify-content-center">
-        <div class="card ms-md-auto mx-xxl-auto">
+      <div class="col-xxl-4 col-md-6 d-flex justify-content-center">
+        <div class="card card-odd">
           <div class="card-body">
             <h5 class="card-title">CHS Band</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
@@ -79,8 +79,8 @@
         </div>
       </div>
 
-      <div class="col-xl-4 col-md-6 d-flex justify-content-center">
-        <div class="card ms-md-auto mx-xxl-auto">
+      <div class="col-xxl-4 col-md-6 d-flex justify-content-center">
+        <div class="card card-even">
           <div class="card-body">
             <h5 class="card-title">Hagan Hunting Club</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Ballcap with Leather Patch Ballcap with Leather Patch
@@ -112,8 +112,8 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-4 col-md-6 d-flex justify-content-center">
-        <div class="card me-md-auto mx-xxl-auto">
+      <div class="col-xxl-4 col-md-6 d-flex justify-content-center">
+        <div class="card card-odd">
           <div class="card-body">
             <h5 class="card-title">Kaylee's Wedding</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Monogramed Napkins</h6>
@@ -144,8 +144,8 @@
         </div>
       </div>
 
-      <div class="col-xl-4 col-md-6 d-flex justify-content-center">
-        <div class="card ms-md-auto mx-xxl-auto">
+      <div class="col-xxl-4 col-md-6 d-flex justify-content-center">
+        <div class="card card-even">
           <div class="card-body">
             <h5 class="card-title">CHS Band</h5>
             <h6 class="card-subtitle mb-2 text-body-secondary">Fall Sweatshirts 2023</h6>
