Update review edit button

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -151,6 +151,8 @@
         </div>
       </div>
     </div>
+    <button class="btn btn-danger" id="importButton">Import Button</button>
+
   </div>
 
 </body>
