--- a/frontend/src/page2/index.html
+++ b/frontend/src/page2/index.html
@@ -13,7 +13,8 @@
     <h1>This is page 2!</h1>
     <h6>just a change</h6>
     <p>added another element.</p>
-    <button class="btn btn-danger">Danger button</button>
+    <button class="btn btn-danger" id="importButton">Import Button</button>
+
   </div>
 </body>
 
