--- a/frontend/src/orderForm/index.html
+++ b/frontend/src/orderForm/index.html
@@ -77,6 +77,16 @@
             <hr class="border border-primary border-3 opacity-75">
           </div>
 
+          <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 " style="display: none">
+            <label class="form-label" for="orderID"></label>
+            <output class="form-control border border-dark" type="text" name="orderID" id="orderID">
+          </div>
+
+          <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 " style="display: none">
+            <label class="form-label" for="customerID"></label>
+            <output class="form-control border border-dark" type="text" name="customerID" id="customerID">
+          </div>
+
           <div class="col-xl-5 col-lg-6 col-md-8 col-11">
             <div class="row">
               <div class="col-md-6 col-12 mb-3">
